# NBA-scan

./: README.md  pyproject.toml  settings.json
NBA-scan/: README.rst  pyproject.toml
NBA-scan/src/pytest_idk/: plugin.py
NBA-scan/tests/: test_idk.py
pytest-NBAscan/: LICENSE  README.rst  mkdocs.yml
pytest-NBAscan/docs/: index.md
pytest-NBAscan/src/pytest_nbascan/: plugin.py
src/: main.py
src/pytest_nbascan/: __init__.py  api.py  data_loader.py
tests/: test_nbascan.py
